// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReportInfoButton handles button click flyout on click 1`] = `
<button
  aria-label="Show report info"
  className="euiButtonIcon euiButtonIcon--primary"
  data-test-subj="reportInfoButton"
  onClick={[Function]}
  type="button"
>
  <EuiIcon
    aria-hidden="true"
    className="euiButtonIcon__icon"
    size="m"
    type="iInCircle"
  >
    <iInCircle
      aria-hidden="true"
      className="euiIcon euiIcon--medium euiButtonIcon__icon"
      focusable="false"
      height="16"
      style={null}
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <svg
        aria-hidden="true"
        className="euiIcon euiIcon--medium euiButtonIcon__icon"
        focusable="false"
        height="16"
        style={null}
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7.5 11.508L7.468 8H6.25V7h2.401l.03 3.508H9.8v1H7.5zm-.25-6.202a.83.83 0 0 1 .207-.577c.137-.153.334-.229.59-.229.256 0 .454.076.594.23.14.152.209.345.209.576 0 .228-.07.417-.21.568-.14.15-.337.226-.593.226-.256 0-.453-.075-.59-.226a.81.81 0 0 1-.207-.568zM8 13A5 5 0 1 0 8 3a5 5 0 0 0 0 10zm0 1A6 6 0 1 1 8 2a6 6 0 0 1 0 12z"
          fillRule="evenodd"
        />
      </svg>
    </iInCircle>
  </EuiIcon>
</button>
`;

exports[`ReportInfoButton opens flyout with fetch error info 1`] = `
Array [
  <EuiFlyout
    aria-labelledby="flyoutTitle"
    closeButtonAriaLabel="Closes this dialog"
    data-test-subj="reportInfoFlyout"
    hideCloseButton={false}
    maxWidth={false}
    onClose={[Function]}
    ownFocus={true}
    size="s"
  >
    <span>
      <EuiWindowEvent
        event="keydown"
        handler={[Function]}
      />
      <EuiOverlayMask
        onClick={[Function]}
      >
        <Portal
          containerInfo={
            <div
              class="euiOverlayMask"
            />
          }
        />
      </EuiOverlayMask>
      <EuiFocusTrap
        clickOutsideDisables={true}
        disabled={false}
        returnFocus={true}
      >
        <EuiOutsideClickDetector
          isDisabled={false}
          onOutsideClick={[Function]}
        >
          <OutsideEventDetector
            handleEvent={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
          >
            <div
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchStart={[Function]}
            >
              <FocusLock
                as="div"
                autoFocus={true}
                disabled={false}
                lockProps={Object {}}
                noFocusGuards={false}
                persistentFocus={false}
                returnFocus={true}
              >
                <div
                  data-focus-guard={true}
                  key="guard-first"
                  style={
                    Object {
                      "height": "0px",
                      "left": "1px",
                      "overflow": "hidden",
                      "padding": 0,
                      "position": "fixed",
                      "top": "1px",
                      "width": "1px",
                    }
                  }
                  tabIndex={0}
                />
                <div
                  data-focus-guard={true}
                  key="guard-nearest"
                  style={
                    Object {
                      "height": "0px",
                      "left": "1px",
                      "overflow": "hidden",
                      "padding": 0,
                      "position": "fixed",
                      "top": "1px",
                      "width": "1px",
                    }
                  }
                  tabIndex={1}
                />
                <div
                  data-focus-lock-disabled={false}
                  onBlur={[Function]}
                  onFocus={[Function]}
                >
                  <SideEffect(FocusWatcher)
                    autoFocus={true}
                    disabled={false}
                    observed={
                      <div
                        data-focus-lock-disabled="false"
                      >
                        <div
                          aria-labelledby="flyoutTitle"
                          class="euiFlyout euiFlyout--small"
                          data-test-subj="reportInfoFlyout"
                          role="dialog"
                          tabindex="0"
                        >
                          <button
                            aria-label="Closes this dialog"
                            class="euiButtonIcon euiButtonIcon--text euiFlyout__closeButton"
                            data-test-subj="euiFlyoutCloseButton"
                            type="button"
                          >
                            <svg
                              aria-hidden="true"
                              class="euiIcon euiIcon--medium euiButtonIcon__icon"
                              focusable="false"
                              height="16"
                              viewBox="0 0 16 16"
                              width="16"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M7.293 8L3.146 3.854a.5.5 0 1 1 .708-.708L8 7.293l4.146-4.147a.5.5 0 0 1 .708.708L8.707 8l4.147 4.146a.5.5 0 0 1-.708.708L8 8.707l-4.146 4.147a.5.5 0 0 1-.708-.708L7.293 8z"
                              />
                            </svg>
                          </button>
                          <div
                            class="euiFlyoutHeader euiFlyoutHeader--hasBorder"
                          >
                            <h2
                              class="euiTitle euiTitle--medium"
                              id="flyoutTitle"
                            >
                              Unable to fetch report info
                            </h2>
                          </div>
                          <div
                            class="euiFlyoutBody"
                          >
                            <div
                              class="euiFlyoutBody__overflow"
                            >
                              <div
                                class="euiText euiText--medium"
                              >
                                Could not fetch the job info
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    }
                    onActivation={[Function]}
                    onDeactivation={[Function]}
                    persistentFocus={false}
                  >
                    <FocusWatcher
                      autoFocus={true}
                      disabled={false}
                      observed={
                        <div
                          data-focus-lock-disabled="false"
                        >
                          <div
                            aria-labelledby="flyoutTitle"
                            class="euiFlyout euiFlyout--small"
                            data-test-subj="reportInfoFlyout"
                            role="dialog"
                            tabindex="0"
                          >
                            <button
                              aria-label="Closes this dialog"
                              class="euiButtonIcon euiButtonIcon--text euiFlyout__closeButton"
                              data-test-subj="euiFlyoutCloseButton"
                              type="button"
                            >
                              <svg
                                aria-hidden="true"
                                class="euiIcon euiIcon--medium euiButtonIcon__icon"
                                focusable="false"
                                height="16"
                                viewBox="0 0 16 16"
                                width="16"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M7.293 8L3.146 3.854a.5.5 0 1 1 .708-.708L8 7.293l4.146-4.147a.5.5 0 0 1 .708.708L8.707 8l4.147 4.146a.5.5 0 0 1-.708.708L8 8.707l-4.146 4.147a.5.5 0 0 1-.708-.708L7.293 8z"
                                />
                              </svg>
                            </button>
                            <div
                              class="euiFlyoutHeader euiFlyoutHeader--hasBorder"
                            >
                              <h2
                                class="euiTitle euiTitle--medium"
                                id="flyoutTitle"
                              >
                                Unable to fetch report info
                              </h2>
                            </div>
                            <div
                              class="euiFlyoutBody"
                            >
                              <div
                                class="euiFlyoutBody__overflow"
                              >
                                <div
                                  class="euiText euiText--medium"
                                >
                                  Could not fetch the job info
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      }
                      onActivation={[Function]}
                      onDeactivation={[Function]}
                      persistentFocus={false}
                    />
                  </SideEffect(FocusWatcher)>
                  <div
                    aria-labelledby="flyoutTitle"
                    className="euiFlyout euiFlyout--small"
                    data-test-subj="reportInfoFlyout"
                    role="dialog"
                    tabIndex={0}
                  >
                    <EuiButtonIcon
                      aria-label="Closes this dialog"
                      className="euiFlyout__closeButton"
                      color="text"
                      data-test-subj="euiFlyoutCloseButton"
                      iconSize="m"
                      iconType="cross"
                      onClick={[Function]}
                      type="button"
                    >
                      <button
                        aria-label="Closes this dialog"
                        className="euiButtonIcon euiButtonIcon--text euiFlyout__closeButton"
                        data-test-subj="euiFlyoutCloseButton"
                        onClick={[Function]}
                        type="button"
                      >
                        <EuiIcon
                          aria-hidden="true"
                          className="euiButtonIcon__icon"
                          size="m"
                          type="cross"
                        >
                          <cross
                            aria-hidden="true"
                            className="euiIcon euiIcon--medium euiButtonIcon__icon"
                            focusable="false"
                            height="16"
                            style={null}
                            viewBox="0 0 16 16"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <svg
                              aria-hidden="true"
                              className="euiIcon euiIcon--medium euiButtonIcon__icon"
                              focusable="false"
                              height="16"
                              style={null}
                              viewBox="0 0 16 16"
                              width="16"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M7.293 8L3.146 3.854a.5.5 0 1 1 .708-.708L8 7.293l4.146-4.147a.5.5 0 0 1 .708.708L8.707 8l4.147 4.146a.5.5 0 0 1-.708.708L8 8.707l-4.146 4.147a.5.5 0 0 1-.708-.708L7.293 8z"
                              />
                            </svg>
                          </cross>
                        </EuiIcon>
                      </button>
                    </EuiButtonIcon>
                    <EuiFlyoutHeader
                      hasBorder={true}
                    >
                      <div
                        className="euiFlyoutHeader euiFlyoutHeader--hasBorder"
                      >
                        <EuiTitle
                          size="m"
                        >
                          <h2
                            className="euiTitle euiTitle--medium"
                            id="flyoutTitle"
                          >
                            Unable to fetch report info
                          </h2>
                        </EuiTitle>
                      </div>
                    </EuiFlyoutHeader>
                    <EuiFlyoutBody>
                      <div
                        className="euiFlyoutBody"
                      >
                        <div
                          className="euiFlyoutBody__overflow"
                        >
                          <EuiText>
                            <div
                              className="euiText euiText--medium"
                            >
                              Could not fetch the job info
                            </div>
                          </EuiText>
                        </div>
                      </div>
                    </EuiFlyoutBody>
                  </div>
                </div>
                <div
                  data-focus-guard={true}
                  style={
                    Object {
                      "height": "0px",
                      "left": "1px",
                      "overflow": "hidden",
                      "padding": 0,
                      "position": "fixed",
                      "top": "1px",
                      "width": "1px",
                    }
                  }
                  tabIndex={0}
                />
              </FocusLock>
            </div>
          </OutsideEventDetector>
        </EuiOutsideClickDetector>
      </EuiFocusTrap>
    </span>
  </EuiFlyout>,
  <div
    aria-labelledby="flyoutTitle"
    className="euiFlyout euiFlyout--small"
    data-test-subj="reportInfoFlyout"
    role="dialog"
    tabIndex={0}
  >
    <EuiButtonIcon
      aria-label="Closes this dialog"
      className="euiFlyout__closeButton"
      color="text"
      data-test-subj="euiFlyoutCloseButton"
      iconSize="m"
      iconType="cross"
      onClick={[Function]}
      type="button"
    >
      <button
        aria-label="Closes this dialog"
        className="euiButtonIcon euiButtonIcon--text euiFlyout__closeButton"
        data-test-subj="euiFlyoutCloseButton"
        onClick={[Function]}
        type="button"
      >
        <EuiIcon
          aria-hidden="true"
          className="euiButtonIcon__icon"
          size="m"
          type="cross"
        >
          <cross
            aria-hidden="true"
            className="euiIcon euiIcon--medium euiButtonIcon__icon"
            focusable="false"
            height="16"
            style={null}
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <svg
              aria-hidden="true"
              className="euiIcon euiIcon--medium euiButtonIcon__icon"
              focusable="false"
              height="16"
              style={null}
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.293 8L3.146 3.854a.5.5 0 1 1 .708-.708L8 7.293l4.146-4.147a.5.5 0 0 1 .708.708L8.707 8l4.147 4.146a.5.5 0 0 1-.708.708L8 8.707l-4.146 4.147a.5.5 0 0 1-.708-.708L7.293 8z"
              />
            </svg>
          </cross>
        </EuiIcon>
      </button>
    </EuiButtonIcon>
    <EuiFlyoutHeader
      hasBorder={true}
    >
      <div
        className="euiFlyoutHeader euiFlyoutHeader--hasBorder"
      >
        <EuiTitle
          size="m"
        >
          <h2
            className="euiTitle euiTitle--medium"
            id="flyoutTitle"
          >
            Unable to fetch report info
          </h2>
        </EuiTitle>
      </div>
    </EuiFlyoutHeader>
    <EuiFlyoutBody>
      <div
        className="euiFlyoutBody"
      >
        <div
          className="euiFlyoutBody__overflow"
        >
          <EuiText>
            <div
              className="euiText euiText--medium"
            >
              Could not fetch the job info
            </div>
          </EuiText>
        </div>
      </div>
    </EuiFlyoutBody>
  </div>,
]
`;

exports[`ReportInfoButton opens flyout with info 1`] = `
Array [
  <EuiFlyout
    aria-labelledby="flyoutTitle"
    closeButtonAriaLabel="Closes this dialog"
    data-test-subj="reportInfoFlyout"
    hideCloseButton={false}
    maxWidth={false}
    onClose={[Function]}
    ownFocus={true}
    size="s"
  >
    <span>
      <EuiWindowEvent
        event="keydown"
        handler={[Function]}
      />
      <EuiOverlayMask
        onClick={[Function]}
      >
        <Portal
          containerInfo={
            <div
              class="euiOverlayMask"
            />
          }
        />
      </EuiOverlayMask>
      <EuiFocusTrap
        clickOutsideDisables={true}
        disabled={false}
        returnFocus={true}
      >
        <EuiOutsideClickDetector
          isDisabled={false}
          onOutsideClick={[Function]}
        >
          <OutsideEventDetector
            handleEvent={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
          >
            <div
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchStart={[Function]}
            >
              <FocusLock
                as="div"
                autoFocus={true}
                disabled={false}
                lockProps={Object {}}
                noFocusGuards={false}
                persistentFocus={false}
                returnFocus={true}
              >
                <div
                  data-focus-guard={true}
                  key="guard-first"
                  style={
                    Object {
                      "height": "0px",
                      "left": "1px",
                      "overflow": "hidden",
                      "padding": 0,
                      "position": "fixed",
                      "top": "1px",
                      "width": "1px",
                    }
                  }
                  tabIndex={0}
                />
                <div
                  data-focus-guard={true}
                  key="guard-nearest"
                  style={
                    Object {
                      "height": "0px",
                      "left": "1px",
                      "overflow": "hidden",
                      "padding": 0,
                      "position": "fixed",
                      "top": "1px",
                      "width": "1px",
                    }
                  }
                  tabIndex={1}
                />
                <div
                  data-focus-lock-disabled={false}
                  onBlur={[Function]}
                  onFocus={[Function]}
                >
                  <SideEffect(FocusWatcher)
                    autoFocus={true}
                    disabled={false}
                    observed={
                      <div
                        data-focus-lock-disabled="false"
                      >
                        <div
                          aria-labelledby="flyoutTitle"
                          class="euiFlyout euiFlyout--small"
                          data-test-subj="reportInfoFlyout"
                          role="dialog"
                          tabindex="0"
                        >
                          <button
                            aria-label="Closes this dialog"
                            class="euiButtonIcon euiButtonIcon--text euiFlyout__closeButton"
                            data-test-subj="euiFlyoutCloseButton"
                            type="button"
                          >
                            <svg
                              aria-hidden="true"
                              class="euiIcon euiIcon--medium euiButtonIcon__icon"
                              focusable="false"
                              height="16"
                              viewBox="0 0 16 16"
                              width="16"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M7.293 8L3.146 3.854a.5.5 0 1 1 .708-.708L8 7.293l4.146-4.147a.5.5 0 0 1 .708.708L8.707 8l4.147 4.146a.5.5 0 0 1-.708.708L8 8.707l-4.146 4.147a.5.5 0 0 1-.708-.708L7.293 8z"
                              />
                            </svg>
                          </button>
                          <div
                            class="euiFlyoutHeader euiFlyoutHeader--hasBorder"
                          >
                            <h2
                              class="euiTitle euiTitle--medium"
                              id="flyoutTitle"
                            >
                              Job Info
                            </h2>
                          </div>
                          <div
                            class="euiFlyoutBody"
                          >
                            <div
                              class="euiFlyoutBody__overflow"
                            >
                              <div
                                class="euiText euiText--medium"
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                    }
                    onActivation={[Function]}
                    onDeactivation={[Function]}
                    persistentFocus={false}
                  >
                    <FocusWatcher
                      autoFocus={true}
                      disabled={false}
                      observed={
                        <div
                          data-focus-lock-disabled="false"
                        >
                          <div
                            aria-labelledby="flyoutTitle"
                            class="euiFlyout euiFlyout--small"
                            data-test-subj="reportInfoFlyout"
                            role="dialog"
                            tabindex="0"
                          >
                            <button
                              aria-label="Closes this dialog"
                              class="euiButtonIcon euiButtonIcon--text euiFlyout__closeButton"
                              data-test-subj="euiFlyoutCloseButton"
                              type="button"
                            >
                              <svg
                                aria-hidden="true"
                                class="euiIcon euiIcon--medium euiButtonIcon__icon"
                                focusable="false"
                                height="16"
                                viewBox="0 0 16 16"
                                width="16"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M7.293 8L3.146 3.854a.5.5 0 1 1 .708-.708L8 7.293l4.146-4.147a.5.5 0 0 1 .708.708L8.707 8l4.147 4.146a.5.5 0 0 1-.708.708L8 8.707l-4.146 4.147a.5.5 0 0 1-.708-.708L7.293 8z"
                                />
                              </svg>
                            </button>
                            <div
                              class="euiFlyoutHeader euiFlyoutHeader--hasBorder"
                            >
                              <h2
                                class="euiTitle euiTitle--medium"
                                id="flyoutTitle"
                              >
                                Job Info
                              </h2>
                            </div>
                            <div
                              class="euiFlyoutBody"
                            >
                              <div
                                class="euiFlyoutBody__overflow"
                              >
                                <div
                                  class="euiText euiText--medium"
                                />
                              </div>
                            </div>
                          </div>
                        </div>
                      }
                      onActivation={[Function]}
                      onDeactivation={[Function]}
                      persistentFocus={false}
                    />
                  </SideEffect(FocusWatcher)>
                  <div
                    aria-labelledby="flyoutTitle"
                    className="euiFlyout euiFlyout--small"
                    data-test-subj="reportInfoFlyout"
                    role="dialog"
                    tabIndex={0}
                  >
                    <EuiButtonIcon
                      aria-label="Closes this dialog"
                      className="euiFlyout__closeButton"
                      color="text"
                      data-test-subj="euiFlyoutCloseButton"
                      iconSize="m"
                      iconType="cross"
                      onClick={[Function]}
                      type="button"
                    >
                      <button
                        aria-label="Closes this dialog"
                        className="euiButtonIcon euiButtonIcon--text euiFlyout__closeButton"
                        data-test-subj="euiFlyoutCloseButton"
                        onClick={[Function]}
                        type="button"
                      >
                        <EuiIcon
                          aria-hidden="true"
                          className="euiButtonIcon__icon"
                          size="m"
                          type="cross"
                        >
                          <cross
                            aria-hidden="true"
                            className="euiIcon euiIcon--medium euiButtonIcon__icon"
                            focusable="false"
                            height="16"
                            style={null}
                            viewBox="0 0 16 16"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <svg
                              aria-hidden="true"
                              className="euiIcon euiIcon--medium euiButtonIcon__icon"
                              focusable="false"
                              height="16"
                              style={null}
                              viewBox="0 0 16 16"
                              width="16"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M7.293 8L3.146 3.854a.5.5 0 1 1 .708-.708L8 7.293l4.146-4.147a.5.5 0 0 1 .708.708L8.707 8l4.147 4.146a.5.5 0 0 1-.708.708L8 8.707l-4.146 4.147a.5.5 0 0 1-.708-.708L7.293 8z"
                              />
                            </svg>
                          </cross>
                        </EuiIcon>
                      </button>
                    </EuiButtonIcon>
                    <EuiFlyoutHeader
                      hasBorder={true}
                    >
                      <div
                        className="euiFlyoutHeader euiFlyoutHeader--hasBorder"
                      >
                        <EuiTitle
                          size="m"
                        >
                          <h2
                            className="euiTitle euiTitle--medium"
                            id="flyoutTitle"
                          >
                            Job Info
                          </h2>
                        </EuiTitle>
                      </div>
                    </EuiFlyoutHeader>
                    <EuiFlyoutBody>
                      <div
                        className="euiFlyoutBody"
                      >
                        <div
                          className="euiFlyoutBody__overflow"
                        >
                          <EuiText>
                            <div
                              className="euiText euiText--medium"
                            />
                          </EuiText>
                        </div>
                      </div>
                    </EuiFlyoutBody>
                  </div>
                </div>
                <div
                  data-focus-guard={true}
                  style={
                    Object {
                      "height": "0px",
                      "left": "1px",
                      "overflow": "hidden",
                      "padding": 0,
                      "position": "fixed",
                      "top": "1px",
                      "width": "1px",
                    }
                  }
                  tabIndex={0}
                />
              </FocusLock>
            </div>
          </OutsideEventDetector>
        </EuiOutsideClickDetector>
      </EuiFocusTrap>
    </span>
  </EuiFlyout>,
  <div
    aria-labelledby="flyoutTitle"
    className="euiFlyout euiFlyout--small"
    data-test-subj="reportInfoFlyout"
    role="dialog"
    tabIndex={0}
  >
    <EuiButtonIcon
      aria-label="Closes this dialog"
      className="euiFlyout__closeButton"
      color="text"
      data-test-subj="euiFlyoutCloseButton"
      iconSize="m"
      iconType="cross"
      onClick={[Function]}
      type="button"
    >
      <button
        aria-label="Closes this dialog"
        className="euiButtonIcon euiButtonIcon--text euiFlyout__closeButton"
        data-test-subj="euiFlyoutCloseButton"
        onClick={[Function]}
        type="button"
      >
        <EuiIcon
          aria-hidden="true"
          className="euiButtonIcon__icon"
          size="m"
          type="cross"
        >
          <cross
            aria-hidden="true"
            className="euiIcon euiIcon--medium euiButtonIcon__icon"
            focusable="false"
            height="16"
            style={null}
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <svg
              aria-hidden="true"
              className="euiIcon euiIcon--medium euiButtonIcon__icon"
              focusable="false"
              height="16"
              style={null}
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.293 8L3.146 3.854a.5.5 0 1 1 .708-.708L8 7.293l4.146-4.147a.5.5 0 0 1 .708.708L8.707 8l4.147 4.146a.5.5 0 0 1-.708.708L8 8.707l-4.146 4.147a.5.5 0 0 1-.708-.708L7.293 8z"
              />
            </svg>
          </cross>
        </EuiIcon>
      </button>
    </EuiButtonIcon>
    <EuiFlyoutHeader
      hasBorder={true}
    >
      <div
        className="euiFlyoutHeader euiFlyoutHeader--hasBorder"
      >
        <EuiTitle
          size="m"
        >
          <h2
            className="euiTitle euiTitle--medium"
            id="flyoutTitle"
          >
            Job Info
          </h2>
        </EuiTitle>
      </div>
    </EuiFlyoutHeader>
    <EuiFlyoutBody>
      <div
        className="euiFlyoutBody"
      >
        <div
          className="euiFlyoutBody__overflow"
        >
          <EuiText>
            <div
              className="euiText euiText--medium"
            />
          </EuiText>
        </div>
      </div>
    </EuiFlyoutBody>
  </div>,
]
`;
